successful application share page created and application page updated

--- a/app/views/v12/provider/account/application-new.html
+++ b/app/views/v12/provider/account/application-new.html
@@ -23,11 +23,11 @@ Manage apprentices
 
       <div class="panel panel-border-narrow">
         <p class="govuk-body">
-          Faizal Dawood<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
+          Rolo Tomasi<br>13 Old Hinckley Road<br>Nuneaton<br>Warwickshire<br>CV10 0AA
         </p>
         <p class="govuk-body">
           07812345678
-          <br> <a href="mailto:faizal.dawood@domainname.co.uk">faizal.dawood@domainname.co.uk</a>
+          <br> <a href="mailto:faizal.dawood@domainname.co.uk">rolo.tomasi@domainname.co.uk</a>
         </p>
       </div>
     </section>
@@ -136,43 +136,102 @@ Manage apprentices
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     </section>
 
+  <!-- decision START -->
     <section>
-      <h3 class="govuk-heading-l">Outcome</h3>
+     
       <form method="post">
-        <div class="hide-print">
-                    <!-- Manage application method -->
-                    <div class="govuk-form-group">
-                          <div class="govuk-radios govuk-radios--conditional" data-module="radios">
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="outcome-successful" name="outcome" type="radio" value="True">
-                                <label for="outcome-successful" class="govuk-label govuk-radios__label" >
-                                    Successful
-                                </label>
-                            </div>
+        
+        <div class="govuk-form-group">
+          <fieldset class="govuk-fieldset" aria-describedby="contact-hint">
+            <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+              <h1 class="govuk-fieldset__heading">
+                Decision
+              </h1>
+            </legend>
 
-                            <div class="govuk-radios__item" data-target="unsuccessful-reason" >
-                                <input id="govuk-radios__input" class="govuk-radios__input  " name="outcome" type="radio" value="False" data-aria-controls="unsuccessful-reason" aria-expanded="false">
-                                <label for="outcome-unsuccessful" class="govuk-label govuk-radios__label">
-                                    Unsuccessful
-                                </label>
-                            </div>
-                            <div id="unsuccessful-reason" class="govuk-radios__conditional">
-                                <div class="govuk-form-group">
-                                    <label class="govuk-label" for="reason">Feedback</label>
-                                    <span class="govuk-hint">Explain why the application has been unsucessful, your comments will be sent to the candidate.</span>
-                                    <textarea class="govuk-textarea" cols="50" rows="6"  id="reason" name="reason" size="12" type="text"></textarea>
-                                </div>
-                            </div>
-                          </div>
-                    </div>
+            <div class="govuk-radios" data-module="govuk-radios">
 
-
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application_decision_in_review" name="application_decision" type="radio" value="in_review">
+                <label class="govuk-label govuk-radios__label" for="application_decision_in_review">
+                  In review 
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="share">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-email">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_in_review" name="application_decision_in_review" type="email" spellcheck="false">
                 </div>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application_decision_share" name="application_decision" type="radio" value="share">
+                <label class="govuk-label govuk-radios__label" for="application_decision_share">
+                  Share with employer
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_share">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-email">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_share" name="application_decision_share" type="email" spellcheck="false" autocomplete="email">
+                </div>
+              </div>
+              
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application_decision_shortlist" name="application_decision" type="radio" value="shortlisted">
+                <label class="govuk-label govuk-radios__label" for="application_decision_shortlist">
+                  Shortlisted by employer 
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_shortlist">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-phone">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_shortlist" name="application_decision_shortlist" type="tel" autocomplete="tel">
+                </div>
+              </div>
+
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application_decision_successful" name="application_decision" type="radio" value="successful">
+                <label class="govuk-label govuk-radios__label" for="application_decision_successful">
+                  Make job offer
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_decision_successful">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-phone">
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_successful" name="application_decision_successful" type="tel" autocomplete="tel">
+                </div>
+              </div>
+              
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="application_decision_unsuccessful" name="application_decision" type="radio" value="unsuccessful" data-aria-controls="application_unsuccessful">
+                <label class="govuk-label govuk-radios__label" for="application_decision_unsuccessful">
+                  Unsuccessful
+                </label>
+              </div>
+              <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="application_unsuccessful">
+                <div class="govuk-form-group">
+                  <label class="govuk-label" for="contact-by-text">
+                    Feedback
+                  </label>
+                  <input class="govuk-input govuk-!-width-one-third" id="application_decision_unsuccessful" name="application_decision_unsuccessful" type="tel" autocomplete="tel">
+                </div>
+        
+              </div>
+            </div>
+        
+          </fieldset>
+        </div>
+              
       </form>
-      <div class="form-group hide-print">
-          <a href="manage-vacancy" class="govuk-button">Save</a>
-          <a href="manage-vacancy" class="govuk-link">Cancel</a>
-      </div>
+
+      <a href="manage-vacancy" class="govuk-button">Save</a>
+        <a href="manage-vacancy" class="govuk-link">Cancel</a>
+      
 
 
 
