--- a/app/views/v12/provider/view-vacancy/3b-manage-vacancy.html
+++ b/app/views/v12/provider/view-vacancy/3b-manage-vacancy.html
@@ -117,10 +117,6 @@ Manage vacancy
 
     <div class="govuk-grid-row" >
       <div class="govuk-grid-column-two-thirds" >
-  <div style="background-color: #f3f2f1; padding: 10px;">
-  
-        
-        <h2 class="govuk-heading-s">Application actions</h2>
   
         
         <p class="govuk-body" >
@@ -132,7 +128,6 @@ Manage vacancy
           <a href="#">Make multiple applications unsuccessful</a>
         </p>
   
-      </div>
       </div>
     </div>
   <!-- end application actions -->
@@ -188,29 +183,56 @@ Manage vacancy
         </tr>
       </thead>
       <tbody>
+
+
         <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Faizal Dawood</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">Successful</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"><strong class="govuk-tag govuk-tag--blue">New</strong></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
-        </tr>
-        <tr>
-          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Bill Shoggins</a></td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">Unsuccessful</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
         </tr>
         <tr>
           <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
-          <td class="govuk-table__cell" role="gridcell" data-label="Status">New</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"><strong class="govuk-tag govuk-tag--blue">Employer reviewed</strong></td>
           <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
           <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
-
+        </tr>
+        <tr>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"><strong class="govuk-tag govuk-tag--yellow">In review</strong></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+        </tr>
+        <tr>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"><strong class="govuk-tag govuk-tag--yellow">Shared</strong></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+        </tr>
+        <tr>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-new">Rolo Tomasi</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C8824ED</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"><strong class="govuk-tag govuk-tag--yellow">Shortlisted</strong></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+        </tr>
+        <tr>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-succesful">Faizal Dawood</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C5662EA</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"><strong class="govuk-tag govuk-tag--green">Offer made</strong></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
+        </tr>
+        <tr>
+          <td class="govuk-table__cell" role="gridcell" data-label="Name"><a href="../account/application-failed">Bill Shoggins</a></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Application ID">C3432TR</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Status"> <strong class="govuk-tag govuk-tag--red">Unsuccessful</strong></td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Date applied">18 Oct 2022</td>
+          <td class="govuk-table__cell" role="gridcell" data-label="Prefer not to say">Prefer not to say</td>
         </tr>
       </tbody>
     </table>
