--- a/app/views/v12/provider/view-vacancy/6a-share-applications.html
+++ b/app/views/v12/provider/view-vacancy/6a-share-applications.html
@@ -83,7 +83,7 @@ Manage vacancy
 %}
 
 <!-- table START -->
-  <form action="6b-check-share.html">
+  <form action="6b-check-share">
     <table class="govuk-table responsive-table" data-module="das-table-sort">
       <thead class="govuk-table__header">
         <tr class="govuk-table__row" role="row">
@@ -132,7 +132,7 @@ Manage vacancy
       </tbody>
     </table>
     <div class="govuk-button-group">
-      <button type="submit" class="govuk-button">Submit</button>
+      <button type="submit" class="govuk-button">Continue</button>
     </div>
 </form>
 
