--- a/app/views/v12/provider/view-vacancy/6b-check-share.html
+++ b/app/views/v12/provider/view-vacancy/6b-check-share.html
@@ -45,6 +45,8 @@ Manage vacancy
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
 
+            <form method="post" action="3b-manage-vacancy-shared">
+
             <div class="govuk-radios" data-module="govuk-radios">
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="share_applications_yes" name="share_applications" type="radio" value="yes">
@@ -67,6 +69,8 @@ Manage vacancy
  <button class="govuk-button" data-module="govuk-button">
   Continue
 </button>
+
+</form>
 
   </div>
 </div>
